--- a/jsontron/tests/index.html
+++ b/jsontron/tests/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="qunit.css" type="text/css"/>
     <script type="text/javascript" src="qunit.js"></script>
+    <script type="text/javascript" src="index.js"></script>    
     <script type="text/javascript" src="../lib/uri/uri.js"></script>
     <script type="text/javascript" src="../lib/uri/schemes/urn.js"></script>
     <script type="text/javascript" src="../lib/jsv.js"></script>
