--- a/jsontron/tests/index.html
+++ b/jsontron/tests/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="../lib/uri/uri.js"></script>
     <script type="text/javascript" src="../lib/uri/schemes/urn.js"></script>
     <script type="text/javascript" src="../lib/jsv.js"></script>
+    <script type="text/javascript" src="../lib/jsontron.js"></script>
     <script type="text/javascript" src="../lib/json-schema-draft-01.js"></script>
     <script type="text/javascript" src="../lib/json-schema-draft-02.js"></script>
     <script type="text/javascript" src="tests.js"></script>
